# server/routes/user.js
@@ -3,6 +3,7 @@ const router = express.Router();
 const {
     getUsers,
     getUser,
+    getTrendingUsers,
     follow,
     unfollow,
     feed,
@@ -12,9 +13,11 @@ const { protect } = require("../utils/protect");
 
 router.route("/").get(protect, getUsers);
 router.route("/feed").get(protect, feed);
+router.route("/trending").get(protect, getTrendingUsers);
 router.route("/").put(protect, editUser);
 router.route("/:username").get(protect, getUser);
 router.route("/:id/follow").get(protect, follow);
 router.route("/:id/unfollow").get(protect, unfollow);
+
 
 module.exports = router;
